# stellar-stream-dynamics

./: .gitignore  README.md  pyproject.toml  requirements.txt
streamtools/: __init__.py
streamtools/analysis/: __init__.py  cluster_properties.py  escape_properties.py  selection.py  series.py  style.py
streamtools/core/: __init__.py  snapshot.py  snapshot_data.py
streamtools/io/: __init__.py  cache.py  precomputed_cache.py  snapshot_reader.py
streamtools/physics/: __init__.py  dynamics.py  potentials.py
streamtools/viz/: __init__.py  clusterplots.py  plotting.py
streamtools/viz/plotting/: __init__.py  angularmomentum.py  animation.py  energy.py  histograms.py  orbits.py
tests/: conftest.py  test_smoke.py
